--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-scrollspy": "^3.4.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
