--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scroll": "^1.8.4",
     "react-scrollspy": "^3.4.3",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
